Add more fileds to classifications endpoint
